# SEPpy

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
docs/: api.rst  conf.py  index copy.rsx  index.rst  installation.rst  requirements.txt  usage.rst
docs/source/: modules.rst.old  seppy.loader.rst  seppy.rst.old  seppy.tests.rst.old  seppy.tools.rst  seppy.util.rst
licenses/: LICENSE.rst
seppy/: __init__.py  version.py
seppy/data/bepi_sixsp_instrumental_constants/: sixsp_side0_e_combined_gf.csv  sixsp_side0_e_gf_en.csv  sixsp_side0_p_combined_gf.csv  sixsp_side0_p_gf_en.csv  sixsp_side0_pe_gf_en.csv  sixsp_side1_e_combined_gf.csv  sixsp_side1_e_gf_en.csv  sixsp_side1_p_combined_gf.csv  sixsp_side1_p_gf_en.csv  sixsp_side1_pe_gf_en.csv  sixsp_side2_e_combined_gf.csv  sixsp_side2_e_gf_en.csv  sixsp_side2_p_combined_gf.csv  sixsp_side2_p_gf_en.csv  sixsp_side2_pe_gf_en.csv  sixsp_side3_e_combined_gf.csv  sixsp_side3_e_gf_en.csv  sixsp_side3_p_combined_gf.csv  sixsp_side3_p_gf_en.csv  sixsp_side3_pe_gf_en.csv  sixsp_side4_e_combined_gf.csv  sixsp_side4_e_gf_en.csv  sixsp_side4_p_combined_gf.csv  sixsp_side4_p_gf_en.csv  sixsp_side4_pe_gf_en.csv
seppy/data/test/: 20230509_side1.csv  20230719_side0.csv  20230719_side1.csv  20230719_side2.csv  epi21106.rl2  psp_isois-epihi_l2-het-rates60_20210531_v15.cdf  soho_erne-hed_l2-1min_20211028_v01.cdf  solo_l2_mag-rtn-normal-1-minute_20210711_v01.cdf  solo_l2_mag-rtn-normal-1-minute_20210712_v01.cdf  sta_l1_het_20211028_v01.cdf  wi_sfsp_3dp_00000000_v01.cdf  wi_sfsp_3dp_20200213_v01.cdf
seppy/loader/: __init__.py  bepi.py  juice.py  psp.py  soho.py  solo.py  stereo.py  wind.py
seppy/tests/: test_loader.py  test_time_shift_analysis.ipynb  test_tools.py  test_tools_onset.py
seppy/tools/: __init__.py  swaves.py  widgets.py  widgets_dynspec.py  widgets_onset.py  widgets_tsa.py
seppy/util/: __init__.py
