[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "seppy"
description = "SEPpy"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "BSD-3-Clause"
authors = [
  { name = "Jan Gieseler", email = "jan.gieseler@utu.fi" },
]
dependencies = [
    "astropy",
    "astroquery",
    "bs4",
    "cdflib",
    "ipympl",
    "ipywidgets",
    "matplotlib",
    "mpl-animators>=1.0.0",
    "numpy",
    "pandas",
    "pooch",
    "requests",
    "solo-epd-loader",
    "sunpy>=4.1.0",
]
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/serpentine-h2020/SEPpy"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["seppy*"]
exclude = ["seppy._dev*"]

[tool.setuptools_scm]
version_file = "seppy/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "seppy",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = [
  "--doctest-rst",
  "--ignore=seppy/_dev",
]
python_files = [
  "test_*.py",
  "*_test.py",
  "test.py",
  "tests.py",
]

[tool.coverage.run]
omit = [
 "setup.py",
 "seppy/_dev/*",
 "seppy/_version*",
 "seppy/conftest.py",
 "seppy/*setup_package*",
 "seppy/tests/*",
 "seppy/*/tests/*",
 "seppy/extern/*",
 "seppy/version*",
 "*/seppy/_dev/*",
 "*/seppy/conftest.py",
 "*/seppy/*setup_package*",
 "*/seppy/tests/*",
 "*/seppy/*/tests/*",
 "*/seppy/extern/*",
 "*/seppy/version*",
 "*/seppy/_version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
